[package]
name = "arb_hash"
version = "0.1.22"
edition = "2021"
repository = "https://github.com/970037201/arb_hash_rs"
license = "GPL-3.0"
description = "Arbitrary experimental block length hash function"

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[dependencies]

[features]
